--- a/k8s/gitops/addons/istio/ingress.yaml
+++ b/k8s/gitops/addons/istio/ingress.yaml
@@ -22,11 +22,11 @@ spec:
           istio: ingressgateway
           version: v1
 
-        tolerations:
-          - key: workload
-            operator: Equal
-            value: weather-forecast
-            effect: NoSchedule
+        # tolerations:
+        #   - key: workload
+        #     operator: Equal
+        #     value: weather-forecast
+        #     effect: NoSchedule
         nodeSelector:
             kubernetes.azure.com/mode: system
 
