--- a/k8s/gitops/addons/tempo/application.yaml
+++ b/k8s/gitops/addons/tempo/application.yaml
@@ -7,7 +7,7 @@ metadata:
     workload: operations
     isGrafana: "true"
   annotations:
-    argocd.argoproj.io/sync-wave: "11" # We need tempo to run before grafana is started
+    argocd.argoproj.io/sync-wave: "12" # We need tempo to run just after open telemetry
 spec:
   project: default
   source:
