--- a/k8s/gitops/addons/tempo/servicemonitors.yaml
+++ b/k8s/gitops/addons/tempo/servicemonitors.yaml
@@ -7,7 +7,7 @@ metadata:
     isGrafana: "true"
     workload: operations
   annotations:
-    argocd.argoproj.io/sync-wave: "12" # We need tempo to run before grafana is started
+    argocd.argoproj.io/sync-wave: "13" # We need service monitor to deploy just after tempo app
 spec:
   project: default
   source:
